# build unit test
add_executable(rg-unit-test unit-test.cpp)
target_compile_definitions(rg-unit-test PRIVATE TEST_FOLDER="${CMAKE_CURRENT_SOURCE_DIR}")
if (RG_BUILD_GPU_TEST AND OPENGL_FOUND)
    target_compile_definitions(rg-unit-test PRIVATE HAS_OPENGL=1)
endif()
target_link_libraries(rg-unit-test PRIVATE random-graphics)
if (ANDROID)
    target_link_libraries(rg-unit-test PRIVATE log)
endif()
